# AIDERS

./: .gitattributes  .gitignore  README.md  config.ini  db_states.txt  docker-compose.dev.yml  docker-compose.yml  install.sh  interactive_start_platform.sh  start_platform.sh
_docs/: LSC Container - segmented.drawio  Launcher - segmented.drawio  ROS Container - segmented.drawio  Simulator - segmented.drawio  architecture.drawio  front-end notes.txt  front-flowchart.drawio  missions JS.drawio  missions flow.drawio  sesame notes.txt
ssm/ros_msgs_sinadra/src/eddi_monitor/eddi_messages/: CMakeLists.txt  package.xml
ssm/ros_msgs_sinadra/src/eddi_monitor/eddi_messages/msg/: BayesianNetworkOutput.msg  ConSertOutput.msg  Guarantee.msg  NodeOutput.msg  OutcomeOutput.msg  SafeMLOutput.msg
ssm/ros_msgs_sinadra/src/eddi_monitor/kios_sinadra_scenario_2/: CMakeLists.txt  package.xml
ssm/ros_msgs_sinadra/src/eddi_monitor/kios_sinadra_scenario_2/launch/: eddi_monitor.launch
ssm/ros_msgs_sinadra/src/eddi_monitor/kios_sinadra_scenario_2/scripts/: EDDIInput.py  RosNode.py  bayesian_networks.py  bn_inference_handler.py  bn_monitor.py  bn_processing_functions.py
ssm/ros_msgs_sinadra/src/eddi_monitor/kios_sinadra_scenario_2/scripts/files/20230830_KIOS_quantitative_model_scenario_2/: 20230830_KIOS_quantitative_model_scenario_2.xdsl  bayesian_network.xmlbif  bayesian_network_config.py
ssm/ros_msgs_sinadra/src/eddi_monitor/kios_sinadra_scenario_2/scripts/inference/: file_extraction.py  inference.py  interfaces.py  risk_sensor_data_collecting.py  sinadra_risk_sensor_data.py
(+862 files in other folders)
