<?xml version="1.0"?>
<package format="2">
  <name>eddi_messages</name>
  <version>0.0.1</version>
  <description>TODO</description>
  <license>TODO</license>


  <maintainer email="sth@todo.com">SomeMaintainer@todo.com</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  

  <exec_depend>message_runtime</exec_depend>
</package>
